--- a/app/src/main/res/layout/main_game.xml
+++ b/app/src/main/res/layout/main_game.xml
@@ -24,26 +24,225 @@
         android:id="@+id/textViewFirstPlayerPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="107dp"
+        android:layout_marginTop="97dp"
+        android:layout_marginEnd="248dp"
+        android:layout_marginBottom="15dp"
         android:text="Player 1:"
         android:textSize="15sp"
-        tools:layout_editor_absoluteX="107dp"
-        tools:layout_editor_absoluteY="97dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textViewSecondPlayerPoints"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewSecondPlayerPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="107dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="248dp"
         android:text="Player 2:"
         android:textSize="15sp"
-        tools:layout_editor_absoluteX="107dp"
-        tools:layout_editor_absoluteY="132dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewFirstPlayerPoints" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/five"
         android:layout_width="97dp"
         android:layout_height="89dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="246dp" />
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="9dp"
+        app:layout_constraintStart_toEndOf="@+id/four"
+        app:layout_constraintTop_toBottomOf="@+id/two" />
+
+    <TextView
+        android:id="@+id/one"
+        android:layout_width="97dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="87dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="19dp"
+        app:layout_constraintBottom_toTopOf="@+id/four"
+        app:layout_constraintEnd_toStartOf="@+id/two"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSecondPlayerPoints" />
+
+    <TextView
+        android:id="@+id/seven"
+        android:layout_width="97dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="207dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/eight"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/four" />
+
+    <TextView
+        android:id="@+id/six"
+        android:layout_width="97dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="52dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/five"
+        app:layout_constraintTop_toBottomOf="@+id/three" />
+
+    <TextView
+        android:id="@+id/eight"
+        android:layout_width="97dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="207dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/seven"
+        app:layout_constraintTop_toBottomOf="@+id/five" />
+
+    <TextView
+        android:id="@+id/two"
+        android:layout_width="97dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="87dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/five"
+        app:layout_constraintStart_toEndOf="@+id/one"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSecondPlayerPoints" />
+
+    <TextView
+        android:id="@+id/three"
+        android:layout_width="97dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="87dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/six"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/two"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSecondPlayerPoints" />
+
+    <TextView
+        android:id="@+id/nine"
+        android:layout_width="97dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="207dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/eight"
+        app:layout_constraintTop_toBottomOf="@+id/six" />
+
+    <TextView
+        android:id="@+id/four"
+        android:layout_width="97dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="9dp"
+        app:layout_constraintEnd_toStartOf="@+id/five"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/one" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="one,one,one,one,one,one,one,one,one" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="one,one,one,one,one,one,one,one,one" />
+
+    <Button
+        android:id="@+id/btnMainMenu"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="135dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="70dp"
+        android:text="Main menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnNextRound"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="8dp"
+        android:text="Next Round"
+        app:layout_constraintBottom_toTopOf="@+id/btnMainMenu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seven"
+
+
+        />
+
+    <View
+        android:id="@+id/divider1"
+        android:layout_width="310dp"
+        android:layout_height="10dp"
+        android:background="@color/black"
+        android:elevation="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/five"
+        app:layout_constraintEnd_toEndOf="@+id/six"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/four"
+        app:layout_constraintTop_toBottomOf="@+id/one" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="310dp"
+        android:layout_height="10dp"
+        android:background="@color/black"
+        android:backgroundTint="#000000"
+        android:elevation="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/seven"
+        app:layout_constraintEnd_toEndOf="@+id/six"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/four"
+        app:layout_constraintTop_toBottomOf="@+id/four" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="9dp"
+        android:layout_height="286dp"
+        android:layout_marginTop="87dp"
+        android:layout_marginBottom="33dp"
+        android:background="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/btnNextRound"
+        app:layout_constraintEnd_toStartOf="@+id/five"
+        app:layout_constraintStart_toEndOf="@+id/one"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSecondPlayerPoints" />
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="9dp"
+        android:layout_height="286dp"
+        android:layout_marginTop="239dp"
+        android:layout_marginBottom="33dp"
+        android:background="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/btnNextRound"
+        app:layout_constraintEnd_toStartOf="@+id/six"
+        app:layout_constraintStart_toEndOf="@+id/five"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
