--- a/app/src/main/res/layout/pvp_settings.xml
+++ b/app/src/main/res/layout/pvp_settings.xml
@@ -3,47 +3,115 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/AppTheme">
 
     <TextView
         android:id="@+id/textViewPVPTitle"
         android:layout_width="192dp"
         android:layout_height="54dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="77dp"
         android:layout_marginEnd="101dp"
-        android:layout_marginBottom="631dp"
+        android:layout_marginBottom="600dp"
         android:text="Enter the name for each contestant"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextPVPFirstPlayer"
+    <LinearLayout
+        android:id="@+id/toggleGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:singleSelection="true">
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnPVPToggleFirst"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="8dp"
+            android:importantForAccessibility="no"
+            app:backgroundTint="@drawable/button_background"
+            app:icon="@mipmap/player_one_foreground"
+            app:iconGravity="textEnd"
+            app:iconSize="55dp"
+            app:iconTint="@color/icon_tint" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnPVPToggleSecond"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="8dp"
+            android:importantForAccessibility="no"
+            app:backgroundTint="@drawable/button_background"
+            app:icon="@mipmap/player_two_foreground"
+            app:iconGravity="textEnd"
+            app:iconSize="55dp"
+            app:iconTint="@color/icon_tint" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnPVPToggleRandom"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:importantForAccessibility="no"
+            app:backgroundTint="@drawable/button_background"
+            app:icon="@mipmap/dice_foreground"
+            app:iconGravity="textEnd"
+            app:iconSize="55dp"
+            app:iconTint="@color/icon_tint" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginBottom="11dp"
+        android:text="First move"
+        app:layout_constraintBottom_toTopOf="@+id/toggleGroup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPVPSecondPlayer" />
+
+    <EditText
+        android:id="@+id/editTextPVPFirstPlayer"
+        android:layout_width="206dp"
+        android:layout_height="53dp"
         android:layout_marginStart="91dp"
-        android:layout_marginTop="175dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="91dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="25dp"
         android:ems="10"
         android:hint="Player 1"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/editTextPVPSecondPlayer"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPVPTitle" />
 
     <EditText
         android:id="@+id/editTextPVPSecondPlayer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="209dp"
+        android:layout_height="54dp"
         android:layout_marginStart="91dp"
         android:layout_marginEnd="91dp"
-        android:layout_marginBottom="334dp"
+        android:layout_marginBottom="350dp"
         android:ems="10"
         android:hint="Player 2"
         android:inputType="text"
@@ -58,14 +126,12 @@
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="145dp"
-        android:layout_marginTop="124dp"
         android:layout_marginEnd="146dp"
-        android:layout_marginBottom="160dp"
+        android:layout_marginBottom="120dp"
         android:text="Play Game"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPVPSecondPlayer" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnPVPBack"
@@ -79,5 +145,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnPVPPlayGame" />
+        app:layout_constraintTop_toBottomOf="@+id/btnPVPPlayGame"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textViewPVPFirstMoveChoice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="153dp"
+        android:text="Chosen: Random"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toggleGroup" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
