--- a/app/src/main/res/layout/main_game.xml
+++ b/app/src/main/res/layout/main_game.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:visibility="visible">
 
     <TextView
         android:id="@+id/textViewPoints"
@@ -23,7 +24,7 @@
         android:id="@+id/textViewFirstPlayerPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="132dp"
         android:text="Player 1:"
         android:textSize="15sp"
@@ -35,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
-        android:layout_marginEnd="108dp"
+        android:layout_marginEnd="50dp"
         android:text="Player 2:"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -202,6 +203,18 @@
 
 
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewWinnerText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:text="t"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewPoints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
