--- a/app/src/main/res/layout/pvc_settings.xml
+++ b/app/src/main/res/layout/pvc_settings.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="91dp"
         android:layout_marginEnd="91dp"
         android:layout_marginBottom="380dp"
-        android:text="p"
+        android:text=""
         android:ems="10"
         android:hint="Your Name"
         android:inputType="text"
